add information to swwager and fixed bag with RE
